# padswitch

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  device.rs  error.rs  hidhide.rs  input_loop.rs  lib.rs  main.rs  process_watcher.rs  setupdi.rs  state.rs  tray.rs  vigem.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AboutPanel.tsx  ControllerCard.tsx  ControllerList.tsx  DriverStatus.tsx  GameRules.tsx  PresetList.tsx  StatusBar.tsx
src/hooks/: usePadSwitch.ts
src/lib/: events.ts  ipc.ts
src/types/: controller.ts
